Portal Navigation, Fetch and Update method completed

--- a/springhibernate/pom.xml
+++ b/springhibernate/pom.xml
@@ -11,8 +11,9 @@
 
 	<!-- This is important to set java version 1.8 -->
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+    	<java.version>18</java.version>
+    	<maven.compiler.target>${java.version}</maven.compiler.target>
+    	<maven.compiler.source>${java.version}</maven.compiler.source>
 	</properties>
 
 
@@ -87,5 +88,18 @@
 	</dependencies>
 	<build>
 		<finalName>springhibernate</finalName>
+		<plugins>
+	 <!-- these plugins used beacause on ubuntu java 18 is used and it pom was showing error-->
+		<plugin>
+   			<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-war-plugin</artifactId>
+    		<version>3.3.1</version>
+		</plugin>
+		<plugin>
+      		<groupId>org.apache.maven.plugins</groupId>
+      		<artifactId>maven-compiler-plugin</artifactId>
+      		<version>3.8.1</version>
+		</plugin>
+	</plugins>
 	</build>
 </project>
