--- a/springhibernate/.project
+++ b/springhibernate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>springhibernate</name>
+	<name>portal_navigation</name>
 	<comment></comment>
 	<projects>
 	</projects>
