Use spring session and hibernate template and code format

--- a/portal_navigation/pom.xml
+++ b/portal_navigation/pom.xml
@@ -11,21 +11,28 @@
 
 	<!-- This is important to set java version 1.8 -->
 	<properties>
-    	<java.version>17</java.version>
-    	<maven.compiler.target>${java.version}</maven.compiler.target>
-    	<maven.compiler.source>${java.version}</maven.compiler.source>
+		<java.version>17</java.version>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
 	</properties>
 
-
-
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -33,7 +40,22 @@
 			<version>5.3.21</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<!-- Spring Beans -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>5.3.21</version>
+		</dependency>
+
+		<!-- Spring Web (Contains ContextLoaderListener) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.3.21</version>
+		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/org.springframework/spring-context -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -45,6 +67,24 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>5.3.21</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>5.3.21</version> <!-- Use the correct version -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.3.21</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.7</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
@@ -62,29 +102,25 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
-		<!-- <dependency> <groupId>org.apache.struts</groupId> <artifactId>struts2-core</artifactId> 
+		<!-- <dependency> <groupId>org.apache.struts</groupId>
+		<artifactId>struts2-core</artifactId> 
 			<version>2.5.30</version> </dependency> -->
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-json-plugin -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.struts/struts2-json-plugin -->
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-json-plugin</artifactId>
 			<version>2.5.30</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
-<!-- 		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<version>1.8.13</version>
-			<scope>runtime</scope>
-		</dependency> -->
-
-
-
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-spring-plugin -->
-		<!-- <dependency> <groupId>org.apache.struts</groupId> <artifactId>struts2-spring-plugin</artifactId> 
-			<version>2.5.30</version> </dependency> -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.struts/struts2-spring-plugin -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-spring-plugin</artifactId>
+			<version>2.5.30</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -92,21 +128,30 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>portal_navigation</finalName>
 		<plugins>
-	 <!-- these plugins used beacause on ubuntu java 18 is used and it pom was showing error-->
-		<plugin>
-   			<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-war-plugin</artifactId>
-    		<version>3.3.1</version>
-		</plugin>
-		<plugin>
-      		<groupId>org.apache.maven.plugins</groupId>
-      		<artifactId>maven-compiler-plugin</artifactId>
-      		<version>3.8.1</version>
-		</plugin>
-	</plugins>
+			<!-- these plugins used beacause on ubuntu java 18 is used and it
+			pom was showing error-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+			</plugin>
+		</plugins>
 	</build>
 </project>
