--- a/portal_navigation/src/main/webapp/WEB-INF/web.xml
+++ b/portal_navigation/src/main/webapp/WEB-INF/web.xml
@@ -12,11 +12,17 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
-<!-- 	 <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener> -->
-    
+
+	<!-- Load Spring Context -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring/spring-config.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -25,8 +31,4 @@
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<!-- <servlet> <servlet-name>FilmData</servlet-name> <servlet-class>servlets.FilmData</servlet-class> 
-		</servlet> <servlet-mapping> <servlet-name>FilmData</servlet-name> <url-pattern>/FilmData</url-pattern> 
-		</servlet-mapping> -->
 </web-app>
